@@ -4,7 +4,7 @@ import com.example.demo.domain.dto.request.GroupRequest;
 import com.example.demo.domain.dto.resource.GroupResource;
 import com.example.demo.domain.entity.GroupEntity;
 import com.example.demo.domain.entity.UserEntity;
-import com.example.demo.exception.CustomException.ResourceNotFoundException;
+import com.example.demo.exception.customexception.ResourceNotFoundException;
 import com.example.demo.mapper.impl.GroupMapper;
 import com.example.demo.repository.GroupRepository;
 import com.example.demo.repository.UserRepository;
@@ -14,7 +14,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class GroupService implements IGroupService {
@@ -32,21 +31,20 @@ public class GroupService implements IGroupService {
     @Transactional
     public GroupResource save(GroupRequest groupRequest) {
         GroupEntity groupEntity = groupMapper.mapFrom(groupRequest);
-        System.out.println(groupEntity);
         return groupMapper.mapTo(groupRepository.save(groupEntity));
     }
 
     @Override
     public List<GroupResource> all() {
         List<GroupEntity> groupEntities = groupRepository.findAll();
-        return groupEntities.stream().map(groupMapper::mapTo).collect(Collectors.toList());
+        return groupEntities.stream().map(groupMapper::mapTo).toList();
     }
 
     @Override
     @Transactional
     public GroupResource delete(Long id) {
         GroupEntity deletedGroup = groupRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Group not found with id: " + id));
+                .orElseThrow(() -> initGroupNotFoundException(id));
         groupRepository.deleteById(id);
         return groupMapper.mapTo(deletedGroup);
     }
@@ -60,9 +58,8 @@ public class GroupService implements IGroupService {
                     Optional.ofNullable(groupRequest.getDescription()).ifPresent(existingGroup::setDescription);
                     return groupRepository.save(existingGroup);
                 }
-        ).orElseThrow(() -> new ResourceNotFoundException("Group not found with id: " + id));
+        ).orElseThrow(() -> initGroupNotFoundException(id));
         GroupEntity groupUpdated = this.updateGroupMember(groupEntity, groupRequest.getUserIds());
-        System.out.println(groupEntity);
         return groupMapper.mapTo(groupUpdated);
     }
 
@@ -83,7 +80,11 @@ public class GroupService implements IGroupService {
     @Override
     public GroupResource getById(Long id) {
         GroupEntity groupEntity = groupRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Group not found with id: " + id));
+                .orElseThrow(() -> initGroupNotFoundException(id));
         return groupMapper.mapTo(groupEntity);
+    }
+
+    private ResourceNotFoundException initGroupNotFoundException(Long id) {
+        return new ResourceNotFoundException("Group not found with id: " + id);
     }
 }
